fixed snsbtn bottom align

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,7 @@
     float: left;
     margin-right: 4px;
     list-style-type: none;
+    margin-top: 3px;
 }
 .snsb iframe {
     margin: 0 !important;
